--- a/first.html
+++ b/first.html
@@ -1,24 +1,93 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>shixx - Premium Electronics Store</title>
-    <meta name="description" content="Discover cutting-edge electronics at shixx. Shop phones, laptops, headphones, monitors, PCs, and graphics cards with premium quality and competitive prices." />
-    <meta name="author" content="shixx Electronics" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AnimeWear - Anime Printed Clothing</title>
+  <link rel="stylesheet" href="first.css">
+</head>
+<body>
 
-    <meta property="og:title" content="shixx - Premium Electronics Store" />
-    <meta property="og:description" content="Shop premium electronics - phones, laptops, gaming gear and more at unbeatable prices" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <header>
+    <div class="navbar">
+      <div class="logo">AnimeWear</div>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Shop</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+      <div class="cart">🛒 Cart (0)</div>
+    </div>
+  </header>
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Express Your Anime Passion</h1>
+      <p>Explore our exclusive collection of anime-printed hoodies, t-shirts, and more!</p>
+      <a href="#" class="btn">Shop Now</a>
+    </div>
+    <div class="hero-image">
+      <img src="https://placehold.co/500x400/000000/ffffff?text=Anime+Hero+Hoodie" alt="Anime Hero Hoodie">
+    </div>
+  </section>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <section class="products">
+    <h2>Featured Anime Collection</h2>
+    <div class="product-grid">
+
+      <div class="product-card">
+        <img src="https://placehold.co/300x300/ff6600/ffffff?text=Naruto+Hoodie" alt="Naruto Hoodie">
+        <p class="product-name">Naruto Hoodie</p>
+        <span class="price">$49.99</span>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+      </div>
+
+      <div class="product-card">
+        <img src="https://placehold.co/300x300/0066ff/ffffff?text=One+Piece+Tee" alt="One Piece T-Shirt">
+        <p class="product-name">One Piece T-Shirt</p>
+        <span class="price">$29.99</span>
+        <div class="rating">⭐⭐⭐⭐</div>
+      </div>
+
+      <div class="product-card">
+        <img src="https://placehold.co/300x300/00cc66/ffffff?text=Demon+Slayer+Jacket" alt="Demon Slayer Jacket">
+        <p class="product-name">Demon Slayer Jacket</p>
+        <span class="price">$59.99</span>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+      </div>
+
+      <div class="product-card">
+        <img src="https://placehold.co/300x300/ff0066/ffffff?text=Attack+on+Titan+Tee" alt="Attack on Titan T-Shirt">
+        <p class="product-name">Attack on Titan T-Shirt</p>
+        <span class="price">$34.99</span>
+        <div class="rating">⭐⭐⭐⭐</div>
+      </div>
+
+      <div class="product-card">
+        <img src="https://placehold.co/300x300/ffcc00/000000?text=Jujutsu+Kaisen+Hoodie" alt="Jujutsu Kaisen Hoodie">
+        <p class="product-name">Jujutsu Kaisen Hoodie</p>
+        <span class="price">$44.99</span>
+        <div class="rating">⭐⭐⭐⭐⭐</div>
+      </div>
+
+      <div class="product-card">
+        <img src="https://placehold.co/300x300/6633ff/ffffff?text=Tokyo+Revengers+Tee" alt="Tokyo Revengers T-Shirt">
+        <p class="product-name">Tokyo Revengers T-Shirt</p>
+        <span class="price">$39.99</span>
+        <div class="rating">⭐⭐⭐</div>
+      </div>
+
+    </div>
+  </section>
+
+  <footer>
+    <p>Follow us on 
+      <a href="#">Instagram</a> | 
+      <a href="#">Twitter</a> | 
+      <a href="#">YouTube</a>
+    </p>
+  </footer>
+
+</body>
 </html>
